# context-window-inspector

./: AGENTS.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.agents/plugins/: marketplace.json
plugins/context-window-inspector/: .mcp.json  README.md
plugins/context-window-inspector/.codex-plugin/: plugin.json
plugins/context-window-inspector/scripts/: context_window_mcp.py
plugins/context-window-inspector/skills/context-window/: SKILL.md
src/context_window_inspector/: __init__.py  claude.py  cli.py  codex.py  install.py  models.py  pricing.py  reporting.py  statusline.py  util.py
tests/: test_claude.py  test_codex.py  test_plugin_mcp.py  test_pricing.py  test_statusline.py
