[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-window-inspector"
version = "0.1.0"
description = "Inspect Claude Code and Codex context window usage from local session logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "context-window-inspector contributors" },
]
dependencies = []

[project.scripts]
cw-inspect = "context_window_inspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
