[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-window-inspector"
version = "0.1.0"
description = "Inspect Claude Code and Codex context window usage from local session logs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "context-window-inspector contributors" },
]
dependencies = []
keywords = [
  "claude-code",
  "codex",
  "context-window",
  "token-usage",
  "llm-observability",
  "prompt-caching",
  "ai-coding-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Logging",
]

[project.scripts]
cw-inspect = "context_window_inspector.cli:main"

[project.urls]
Homepage = "https://github.com/androidZzT/context-window-inspector"
Repository = "https://github.com/androidZzT/context-window-inspector"
Issues = "https://github.com/androidZzT/context-window-inspector/issues"
Releases = "https://github.com/androidZzT/context-window-inspector/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
